# pdf-rag

./: .gitignore  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  app.py  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  QUERY.md  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/pdf_rag/: __init__.py
src/rag/app/: app.py
src/rag/assets/database/: chroma.sqlite3
src/rag/core/: configuration.py  query.py  rag.py
src/rag/research/: csv.py
src/rag/sysconfig/: appSettings.json
src/rag/utils/: delete.py
tests/: __init__.py  compare.py  test_pdf_rag.py
